# Containarium

./: .gitignore  .golangci.yml  CHANGELOG.md  Makefile  README.md  SECURITY.md  glama.json  go.mod  go.sum
agent-runtime/: README.md  package-lock.json  package.json
configs/: stacks.yaml
distros/py/: .gitignore  pyproject.toml
distros/py/src/containarium_telemetry/: __init__.py  _config.py  _distro.py  _dry_run.py  _exec_shim.py  _init.py  _instrumentations.py  _resource.py  _version.py
distros/py/src/containarium_telemetry.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
distros/py/tests/: test_config.py  test_distro.py  test_dry_run.py  test_exec_shim.py  test_init.py  test_instrumentations.py  test_integration_flask.py  test_resource.py
docs/: AGENT-DATA-PLANE-SEPARATION-DESIGN.md  AGENT-MODEL-GATEWAY-DESIGN.md  AGENT-RUNTIME-INBOX-LOOP-DESIGN.md  AGENT-SANDBOX-POSITIONING.md  AGENT-SKILLS-BRINGUP-RUNBOOK.md  AGENT-SKILLS-CREWS-DESIGN.md  AGENT-SKILLS-QUICKSTART.md  AGENT-WORKSPACE-SPIKE.md  ALERTING-SETUP.md  ANDROID-DEV-SETUP.md  BYOC-PUBLIC-INGRESS-DESIGN.md  CLOUD-ACTUATION-CLIENT-DESIGN.md  CLOUD-ACTUATION-SMOKE.md  CLOUD-NATIVE-METRICS-EXPORT-DESIGN.md  CLOUD-NATIVE-METRICS-EXPORT.md  COMPOSE-AUTOSTART-DESIGN.md  CONTAINARIUM-HOST-TO-VM-MIGRATION.md  CPU-CAPACITY-ADMISSION.md  CROSS-PEER-FILE-TRANSFER.md  CUTOVER-DEMO-INTO-PROD-SENTINEL.md  DB-BACKUP-OPERATIONS.md  DISASTER-RECOVERY.md  EGRESS-FANOUT-DETECTION.md  EGRESS-VIA-CLIENT-DESIGN.md  EKS-GKE-DEPLOY.md  IMAGE-BAKE.md  ISO27001-COMPLIANCE.md  K8S-AGENT-BOX-RUNTIME-DESIGN.md  KIND-QUICKSTART.md  KUBEFLOW-SETUP.md  MCP-INTEGRATION.md  MCP-QUICKSTART.md  METRICS-EXPORT-DEADMAN-ALERT-RUNBOOK.md  MULTI-BACKEND-PEERS.md  MULTI-POOL.md  OBSERVABILITY-HA-DESIGN.md  (+26 more)
hacks/: README.md  (+1 more)
(+1006 files in other folders)
